update: clean up page and declutter modify react and js projects to create room for the slick slider closes #16 add pictures and projects closes #12 closes #4 closes #10 divide js and react projects

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 											<span class="icon fa-twitter"></span>
 											@techieEliot
 										</a>
-										<p class="bio-section"><strong>Welcome to my portfolio page!</strong><br>I'm excited to share with you some of my story and what I've created. I'm currently a full-time high school tech teacher making a career switch as a web developer. For the past two years, I've been learning on my own including freeCodeCamp projects, then at the end of last year I joined a bootcamp in the evenings. Please browse below and contact me via <a href="#four">the form at the bottom of this page</a>, <a href="https://twitter.com/techieEliot" target="_blank">Twitter</a>, or <a href="mailto:eliot587@gmail.com">my email</a>.</p> 
+										<p class="bio-section"><strong>Welcome to my portfolio page!</strong><br>I'm excited to share with you some things about me, what I can do, and have created. I'm currently a full-time high school tech teacher making a career switch as a web developer. For the past two years, I've been learning on my own including projects, then at the end of last year I joined a bootcamp in the evenings. Please browse below and contact me via <a href="#four">the form at the bottom of this page</a>, <a href="https://twitter.com/techieEliot" target="_blank">Twitter</a>, or <a href="mailto:eliot587@gmail.com">my email</a>.</p> 
 	
 									</section>
 								</div>
@@ -73,20 +73,25 @@
 								<div class="container">
 									<h3>Things I Can Do</h3>
 									<p>Here's a list of things I can do:</p>
-									<ul class="feature-icons">
-										<li class="fas fa-js-square">JavaScript</li>
-										<li class="fas fa-database">SQL</li>
-										<li class="fas fa-envira">MongoDB</li>
-										<li class="fas fa-cog">Express JS</li>
-										<li class="fas fa-node-js">Node JS</li>
-										<li class="fas fa-coffee">jQuery</li>
-										<li class="fas fa-git-alt">Git</li>
-										<li class="fas fa-python">Python 3</li>
-										<li class="fas fa-wordpress">WordPress</li>
-										<li class="fas fa-css3-alt">CSS3</li>
-										<li class="fas fa-sass">SASS</li>
-										<li class="fas fa-html5">HTML5</li>
-									</ul>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/pic00.jpg" alt="Add me" /></a>
+											<ul class="feature-icons">
+												<li class="fas fa-js-square">JavaScript</li>
+												<li class="fas fa-database">SQL</li>
+												<li class="fas fa-envira">MongoDB</li>
+												<li class="fas fa-cog">Express JS</li>
+												<li class="fas fa-node-js">Node JS</li>
+												<li class="fas fa-coffee">jQuery</li>
+												<li class="fas fa-git-alt">Git</li>
+												<li class="fas fa-python">Python 3</li>
+												<li class="fas fa-wordpress">WordPress</li>
+												<li class="fas fa-css3-alt">CSS3</li>
+												<li class="fas fa-sass">SASS</li>
+												<li class="fas fa-html5">HTML5</li>
+											</ul>
+										</article>
+									</div>	
 								</div>
 							</section>
 							
@@ -94,68 +99,77 @@
 							<section id="three">
 								<div class="container">
 									<h3>Things I Have Created</h3>
-									<p>These are my projects.
+									<p>These are my projects:
 									</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Javascript, SQL, Node JS & React JS Sites</h4>
+												<h4>Node JS & React JS Sites</h4>
 												<p>Since the beginning of April 2019, I have created sites with these technologies.
 												</p>
 												<p>Note: you'll need to follow the npm commands for certain projects</p>
+										
 												<ul class="feature-icons">
 													<li class="fa-code">
-														<a href="https://techieeliot.github.io/jsforwp-conf-workshop-2019-eliot-react/">React JS Image Box (2019 JavaScript for WordPress Conference)</a>
+														<a href="https://techieeliot.github.io/jsforwp-conf-workshop-2019-eliot-react/">React JS - Image Box Page</a>
 													</li>
 													<li class="fa-code">
-														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/c__anecdotes__">Anecdote Vote Tally App (Full Stack Open React)</a>
+														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/c__anecdotes__">React JS - Anecdote Vote Tally App</a>
 													</li>
 													<li class="fa-code">
-														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/b__unicafe__">Vote Tally Feedback Application (Full Stack Open React)</a>
+														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/b__unicafe__">React JS - Vote Tally Feedback Application</a>
 													</li>
 													<li class="fa-code">
-														<a href="https://techieeliot.github.io/magnoliaJS/">MagnoliaJS Workshop: Web Components</a
+														<a href="https://techieeliot.github.io/magnoliaJS/">Web Components - Workshop</a
 															></li>
-													<li class="fa-code">
-														<a href="https://github.com/techieeliot/legendary-palm-tree">SQL Project at Mississippi Coding Academy 2020</a>
-													</li>
-													<li class="fa-code">
-														<a href="https://github.com/techieeliot/msCoding/tree/master/javascript">JavaScript Learning at Mississippi Coding Academy 2020</a>
-													</li>
-													</li>
-													<li class="fa-code">
-														<a href="https://techieeliot.github.io/new-JS-study-group/">w3Develops JavaScript Class Page</a>
-													</li>
-
+														</ul>
+													</div>
+												</article>
+												<article>
+													<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+													<div class="inner">
+														<h4>SQL and JavaScript Sites</h4>
+														<p>Since the beginning of April 2019, I have created sites with these technologies.
+														</p>
+														<ul class="feature-icons">
+															<li class="fa-code">
+																<a href="https://github.com/techieeliot/legendary-palm-tree">SQL - CRUD Files</a>
+															</li>
+															<li class="fa-code">
+																	<a href="https://github.com/techieeliot/msCoding/tree/master/javascript/projects/shopping%20cart">JS - Shopping Cart</a>
+																</li>
+															<li class="fa-code">
+																<a href="https://github.com/techieeliot/msCoding/tree/master/javascript/projects/tic-tac-toe">JS - Tic Tac Toe</a>
+															</li>		
 												</ul>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Pure HTML, CSS, Bootstrap, jQuery Sites, and Tailwind CSS</h4>
 												<p>During the months of October 2018 through March 2019, I learned HTML and CSS.</p>
 												<ul class="feature-icons">
 													<li class="fa-code">
-														<a href="https://techieeliot.github.io/gcc-web-design-co/">Deep South Devs (Company Page with jQuery Slick Slider)</a></li>
+														<a href="https://techieeliot.github.io/gcc-web-design-co/">jQuery - Deep South Devs</a></li>
 													<li class="fa-code">
-														<a href="https://github.com/techieeliot/mentors-scaling-garbanzo">Tailwind CSS Example</a>
+														<a href="https://github.com/techieeliot/mentors-scaling-garbanzo">Tailwind CSS - Example Page</a>
 													<li class="fa-code">
-														<a href="https://freecodecampjxn.github.io/flexbox-example/">freeCodeCamp Jackson, MS Flexbox Examples</a>
+														<a href="https://freecodecampjxn.github.io/flexbox-example/">CSS Flexbox - freeCodeCamp Jackson, MS</a>
 													</li>
 												</ul>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" />
+											<a href="#" class="image"><img src="images/pic04.jpg" alt="" />
 											</a>
 											<div class="inner">
 												<h4>WordPress & Wix Sites</h4>
 												<p>In December 2018, I created sites using content management systems.</p>
 												<ul class="feature-icons">
 													<li class="fa-code">
-														<a href="https://weedwarriorsjackson.com/">WP - Weed Warriors Jackson</a>
+														<a href="https://weedwarriorsjackson.com/">WordPress - Weed Warriors Jackson</a>
 													</li>
 													<li class="fa-code">
 														<a href="https://www.msparalegals.org/">Wix - Mississppi Paralegals Association</a>
