fix some of the issues in the projects section reword some of the project descriptions add margin-bottom to images in features class move the note up closes #17

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 								<div class="container">
 									<h3>Things I Have Created</h3>
 									<p>These are my projects:
+									<p>Note: you'll need to follow the npm commands for certain projects</p>
 									</p>
 									<div class="features">
 										<article>
@@ -108,17 +109,16 @@
 												<h4>Node JS & React JS Sites</h4>
 												<p>Since the beginning of April 2019, I have created sites with these technologies.
 												</p>
-												<p>Note: you'll need to follow the npm commands for certain projects</p>
 										
 												<ul class="feature-icons">
 													<li class="fa-code">
 														<a href="https://techieeliot.github.io/jsforwp-conf-workshop-2019-eliot-react/">React JS - Image Box Page</a>
 													</li>
 													<li class="fa-code">
-														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/c__anecdotes__">React JS - Anecdote Vote Tally App</a>
+														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/c__anecdotes__">React JS - Anecdote App</a>
 													</li>
 													<li class="fa-code">
-														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/b__unicafe__">React JS - Vote Tally Feedback Application</a>
+														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/b__unicafe__">React JS - Feedback App</a>
 													</li>
 													<li class="fa-code">
 														<a href="https://techieeliot.github.io/magnoliaJS/">Web Components - Workshop</a
