refactor: place the 'feature-icons' bullets class inside 'inner' class closes #18

--- a/index.html
+++ b/index.html
@@ -76,20 +76,22 @@
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic00.jpg" alt="Add me" /></a>
-											<ul class="feature-icons">
-												<li class="fas fa-js-square">JavaScript</li>
-												<li class="fas fa-database">SQL</li>
-												<li class="fas fa-envira">MongoDB</li>
-												<li class="fas fa-cog">Express JS</li>
-												<li class="fas fa-node-js">Node JS</li>
-												<li class="fas fa-coffee">jQuery</li>
-												<li class="fas fa-git-alt">Git</li>
-												<li class="fas fa-python">Python 3</li>
-												<li class="fas fa-wordpress">WordPress</li>
-												<li class="fas fa-css3-alt">CSS3</li>
-												<li class="fas fa-sass">SASS</li>
-												<li class="fas fa-html5">HTML5</li>
-											</ul>
+											<div class="inner">
+												<ul class="feature-icons">
+													<li class="fas fa-js-square">JavaScript</li>
+													<li class="fas fa-database">SQL</li>
+													<li class="fas fa-envira">MongoDB</li>
+													<li class="fas fa-cog">Express JS</li>
+													<li class="fas fa-node-js">Node JS</li>
+													<li class="fas fa-coffee">jQuery</li>
+													<li class="fas fa-git-alt">Git</li>
+													<li class="fas fa-python">Python 3</li>
+													<li class="fas fa-wordpress">WordPress</li>
+													<li class="fas fa-css3-alt">CSS3</li>
+													<li class="fas fa-sass">SASS</li>
+													<li class="fas fa-html5">HTML5</li>
+												</ul>
+											</div>
 										</article>
 									</div>	
 								</div>
