update: responsive buttons, colors to blues, fonts modernized, readme photos closes #22 closes #21 closes #20

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<span class="image avatar"><img src="images/avatar.jpg" alt="My headshot" /></span>
 					<h1 id="logo">
 						<a href="#">Eliot Sanford</a></h1>
-					<p>Web Developer + Teacher</p>
+					<p class="monospace">Web Developer + Teacher</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -55,16 +55,32 @@
 								<div class="container">
 									<header class="major">
 										<h2>Eliot Sanford</h2>
-										<p>Web Developer + Teacher</p>
+										<p class="monospace">Web Developer + Teacher</p>
 									</header>
-									<section>
-										<a class="btn btn-twitter btn-lg" href="https://twitter.com/techieEliot" role="button" target="_blank">
-											<span class="icon fa-twitter"></span>
-											@techieEliot
-										</a>
-										<p class="bio-section"><strong>Welcome to my portfolio page!</strong><br>I'm excited to share with you some things about me, what I can do, and have created. I'm currently a full-time high school tech teacher making a career switch as a web developer. For the past two years, I've been learning on my own including projects, then at the end of last year I joined a bootcamp in the evenings. Please browse below and contact me via <a href="#four">the form at the bottom of this page</a>, <a href="https://twitter.com/techieEliot" target="_blank">Twitter</a>, or <a href="mailto:eliot587@gmail.com">my email</a>.</p> 
-	
-									</section>
+									<article>
+										<h3>Welcome to my portfolio page!</h3>
+										<p class="bio-section">I'm excited to share with you some things about me, what I can do, and have created. I'm currently a full-time high school tech teacher making a career switch as a web developer. For the past two years, I've been learning on my own including projects, then at the end of last year I joined a bootcamp in the evenings. Please browse below and contact me via <a href="#four">the form at the bottom of this page</a>, <a href="https://twitter.com/techieEliot" target="_blank">Twitter</a>, or <a href="mailto:eliot587@gmail.com">my email</a>.</p> 
+										
+										<div class="inner">
+											<ul class="feature-icons">	
+												<li>
+													<a href="https://twitter.com/techieEliot" target="_blank">
+														<button class="button primary icon fa-twitter">techieEliot</button>
+													</a>
+												</li>
+												<li>
+													<a href="https://github.com/techieeliot" target="_blank">
+														<button class="button primary icon fa-github">techieEliot</button>
+													</a>
+												</li>
+												<li>
+													<a href="mailto:eliot587@gmail.com" target="_blank">
+														<button class="button primary icon fa-envelope">eliot587@gmail.com</button>
+													</a>
+												</li>
+											</ul>
+										</div>
+									</article>
 								</div>
 							</section>
 							
@@ -78,18 +94,18 @@
 											<a href="#" class="image"><img src="images/pic00.jpg" alt="Add me" /></a>
 											<div class="inner">
 												<ul class="feature-icons">
-													<li class="fas fa-js-square">JavaScript</li>
-													<li class="fas fa-database">SQL</li>
-													<li class="fas fa-envira">MongoDB</li>
-													<li class="fas fa-cog">Express JS</li>
-													<li class="fas fa-node-js">Node JS</li>
-													<li class="fas fa-coffee">jQuery</li>
-													<li class="fas fa-git-alt">Git</li>
-													<li class="fas fa-python">Python 3</li>
-													<li class="fas fa-wordpress">WordPress</li>
-													<li class="fas fa-css3-alt">CSS3</li>
-													<li class="fas fa-sass">SASS</li>
-													<li class="fas fa-html5">HTML5</li>
+													<li class="fa-js-square">JavaScript</li>
+													<li class="fa-database">SQL</li>
+													<li class="fa-envira">MongoDB</li>
+													<li class="fa-cog">Express JS</li>
+													<li class="fa-node-js">Node JS</li>
+													<li class="fa-coffee">jQuery</li>
+													<li class="fa-git-alt">Git</li>
+													<li class="fa-python">Python 3</li>
+													<li class="fa-wordpress">WordPress</li>
+													<li class="fa-css3-alt">CSS3</li>
+													<li class="fa-sass">SASS</li>
+													<li class="fa-html5">HTML5</li>
 												</ul>
 											</div>
 										</article>
