update: add Coach to title and increase header size closes #23

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<span class="image avatar"><img src="images/avatar.jpg" alt="My headshot" /></span>
 					<h1 id="logo">
 						<a href="#">Eliot Sanford</a></h1>
-					<p class="monospace">Web Developer + Teacher</p>
+					<p class="monospace">Developer Teacher + Coach</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -55,7 +55,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Eliot Sanford</h2>
-										<p class="monospace">Web Developer + Teacher</p>
+										<p class="monospace">Developer Teacher + Coach</p>
 									</header>
 									<article>
 										<h3>Welcome to my portfolio page!</h3>
@@ -88,7 +88,6 @@
 							<section id="two">
 								<div class="container">
 									<h3>Things I Can Do</h3>
-									<p>Here's a list of things I can do:</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic00.jpg" alt="Add me" /></a>
@@ -117,17 +116,13 @@
 							<section id="three">
 								<div class="container">
 									<h3>Things I Have Created</h3>
-									<p>These are my projects:
-									<p>Note: you'll need to follow the npm commands for certain projects</p>
-									</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Node JS & React JS Sites</h4>
-												<p>Since the beginning of April 2019, I have created sites with these technologies.
+												<p>Note: you'll need to follow the npm commands for certain projects</p>
 												</p>
-										
 												<ul class="feature-icons">
 													<li class="fa-code">
 														<a href="https://techieeliot.github.io/jsforwp-conf-workshop-2019-eliot-react/">React JS - Image Box Page</a>
@@ -204,7 +199,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Please contact me using this form.</p>
+									<p>Look forward to hearing from you!</p>
 									<form method="post" action="https://formspree.io/eliot587@gmail.com">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
