update: reduce words in projects, add better icons, flip blue colors closes #25 #26

--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
 													<li class="fa-database">SQL</li>
 													<li class="fa-envira">MongoDB</li>
 													<li class="fa-cog">Express JS</li>
+													<li class="fa-react">React JS</li>
 													<li class="fa-node-js">Node JS</li>
-													<li class="fa-coffee">jQuery</li>
+													<li class="fa-dollar-sign">jQuery</li>
 													<li class="fa-git-alt">Git</li>
 													<li class="fa-python">Python 3</li>
 													<li class="fa-wordpress">WordPress</li>
@@ -124,18 +125,18 @@
 												<p>Note: you'll need to follow the npm commands for certain projects</p>
 												</p>
 												<ul class="feature-icons">
-													<li class="fa-code">
-														<a href="https://techieeliot.github.io/jsforwp-conf-workshop-2019-eliot-react/">React JS - Image Box Page</a>
+													<li class="fa-react">
+														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/c__anecdotes__">Anecdote App</a>
 													</li>
-													<li class="fa-code">
-														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/c__anecdotes__">React JS - Anecdote App</a>
+													<li class="fa-react">
+														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/b__unicafe__">Feedback App</a>
 													</li>
-													<li class="fa-code">
-														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/b__unicafe__">React JS - Feedback App</a>
+													<li class="fa-tools">
+														<a href="https://techieeliot.github.io/magnoliaJS/">Web Components Workshop</a>
 													</li>
-													<li class="fa-code">
-														<a href="https://techieeliot.github.io/magnoliaJS/">Web Components - Workshop</a
-															></li>
+													<li class="fa-react">
+														<a href="https://techieeliot.github.io/jsforwp-conf-workshop-2019-eliot-react/">Image Box Page</a>
+													</li>
 														</ul>
 													</div>
 												</article>
@@ -146,14 +147,14 @@
 														<p>Since the beginning of April 2019, I have created sites with these technologies.
 														</p>
 														<ul class="feature-icons">
-															<li class="fa-code">
-																<a href="https://github.com/techieeliot/legendary-palm-tree">SQL - CRUD Files</a>
+															<li class="fa-database">
+																<a href="https://github.com/techieeliot/legendary-palm-tree">SQL CRUD Files</a>
 															</li>
-															<li class="fa-code">
-																	<a href="https://github.com/techieeliot/msCoding/tree/master/javascript/projects/shopping%20cart">JS - Shopping Cart</a>
+															<li class="fa-js-square">
+																	<a href="https://github.com/techieeliot/msCoding/tree/master/javascript/projects/shopping%20cart">Shopping Cart</a>
 																</li>
-															<li class="fa-code">
-																<a href="https://github.com/techieeliot/msCoding/tree/master/javascript/projects/tic-tac-toe">JS - Tic Tac Toe</a>
+															<li class="fa-js-square">
+																<a href="https://github.com/techieeliot/msCoding/tree/master/javascript/projects/tic-tac-toe">Tic Tac Toe</a>
 															</li>		
 												</ul>
 											</div>
@@ -164,12 +165,12 @@
 												<h4>Pure HTML, CSS, Bootstrap, jQuery Sites, and Tailwind CSS</h4>
 												<p>During the months of October 2018 through March 2019, I learned HTML and CSS.</p>
 												<ul class="feature-icons">
-													<li class="fa-code">
-														<a href="https://techieeliot.github.io/gcc-web-design-co/">jQuery - Deep South Devs</a></li>
-													<li class="fa-code">
-														<a href="https://github.com/techieeliot/mentors-scaling-garbanzo">Tailwind CSS - Example Page</a>
-													<li class="fa-code">
-														<a href="https://freecodecampjxn.github.io/flexbox-example/">CSS Flexbox - freeCodeCamp Jackson, MS</a>
+													<li class="fa-dollar-sign">
+														<a href="https://techieeliot.github.io/gcc-web-design-co/">jQuery Deep South Devs</a></li>
+													<li class="fa-stream">
+														<a href="https://github.com/techieeliot/mentors-scaling-garbanzo">Tailwind CSS Example Page</a>
+													<li class="fa-css3">
+														<a href="https://freecodecampjxn.github.io/flexbox-example/">CSS Flexbox freeCodeCamp Jackson, MS</a>
 													</li>
 												</ul>
 											</div>
@@ -181,10 +182,10 @@
 												<h4>WordPress & Wix Sites</h4>
 												<p>In December 2018, I created sites using content management systems.</p>
 												<ul class="feature-icons">
-													<li class="fa-code">
+													<li class="fa-wordpress">
 														<a href="https://weedwarriorsjackson.com/">WordPress - Weed Warriors Jackson</a>
 													</li>
-													<li class="fa-code">
+													<li class="fa-wix">
 														<a href="https://www.msparalegals.org/">Wix - Mississppi Paralegals Association</a>
 													</li>
 
