update: add link to top photo reword wordpress and wix icons fix top links to id one closes #27

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="My headshot" /></span>
+					<a href="#one">
+						<span class="image avatar">
+							<img src="images/avatar.jpg" alt="My headshot" />
+						</span>
+					</a>
 					<h1 id="logo">
-						<a href="#">Eliot Sanford</a></h1>
+						<a href="#one">Eliot Sanford</a>
+					</h1>
 					<p class="monospace">Developer Teacher + Coach</p>
 				</header>
 				<nav id="nav">
@@ -183,10 +188,10 @@
 												<p>In December 2018, I created sites using content management systems.</p>
 												<ul class="feature-icons">
 													<li class="fa-wordpress">
-														<a href="https://weedwarriorsjackson.com/">WordPress - Weed Warriors Jackson</a>
+														<a href="https://weedwarriorsjackson.com/">Weed Warriors Jackson</a>
 													</li>
 													<li class="fa-wix">
-														<a href="https://www.msparalegals.org/">Wix - Mississppi Paralegals Association</a>
+														<a href="https://www.msparalegals.org/">Mississppi Paralegals Association</a>
 													</li>
 
 												</ul>	
