update: add more projects and target a new tab closes #28 closes #29 closes #30

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 									<h3>Things I Can Do</h3>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic00.jpg" alt="Add me" /></a>
+											<a href="#" class="image"><img src="images/pic00.jpg" alt="web development books next to a small cactus" /></a>
 											<div class="inner">
 												<ul class="feature-icons">
 													<li class="fa-js-square">JavaScript</li>
@@ -108,6 +108,7 @@
 													<li class="fa-git-alt">Git</li>
 													<li class="fa-python">Python 3</li>
 													<li class="fa-wordpress">WordPress</li>
+													<li class="fa-bootstrap">Bootstrap</li>
 													<li class="fa-css3-alt">CSS3</li>
 													<li class="fa-sass">SASS</li>
 													<li class="fa-html5">HTML5</li>
@@ -124,74 +125,91 @@
 									<h3>Things I Have Created</h3>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic01.jpg" alt="hands on a mac laptop keyboard shot from above" /></a>
 											<div class="inner">
 												<h4>Node JS & React JS Sites</h4>
 												<p>Note: you'll need to follow the npm commands for certain projects</p>
 												</p>
 												<ul class="feature-icons">
 													<li class="fa-react">
-														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/c__anecdotes__">Anecdote App</a>
+														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/c__anecdotes__" target="_blank">Anecdote App</a>
 													</li>
 													<li class="fa-react">
-														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/b__unicafe__">Feedback App</a>
+														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/b__unicafe__" target="_blank">Feedback App</a>
+													</li>
+													<li class="fa-react">
+														<a href="https://techieeliot.github.io/jsforwp-conf-workshop-2019-eliot-react/" target="_blank">Image Box Page</a>
+													</li>
+													<li class="fa-node-js">
+														<a href="https://github.com/techieeliot/KikiSaver" target="_blank">Kiki Saver</a>
+													</li>
+													<li class="fa-node-js">
+														<a href="https://github.com/techieeliot/msCoding/tree/master/node" target="_blank">Kanye Quotes</a>
 													</li>
 													<li class="fa-tools">
-														<a href="https://techieeliot.github.io/magnoliaJS/">Web Components Workshop</a>
-													</li>
-													<li class="fa-react">
-														<a href="https://techieeliot.github.io/jsforwp-conf-workshop-2019-eliot-react/">Image Box Page</a>
+														<a href="https://techieeliot.github.io/magnoliaJS/" target="_blank">Web Components Workshop</a>
 													</li>
 														</ul>
 													</div>
 												</article>
 												<article>
-													<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+													<a href="#" class="image"><img src="images/pic02.jpg" alt="man with colorful socks seated in a chair crossed-legged reading javascript & jquery" /></a>
 													<div class="inner">
 														<h4>SQL and JavaScript Sites</h4>
 														<p>Since the beginning of April 2019, I have created sites with these technologies.
 														</p>
 														<ul class="feature-icons">
 															<li class="fa-database">
-																<a href="https://github.com/techieeliot/legendary-palm-tree">SQL CRUD Files</a>
+																<a href="https://github.com/techieeliot/legendary-palm-tree" target="_blank">SQL CRUD Files</a>
 															</li>
 															<li class="fa-js-square">
-																	<a href="https://github.com/techieeliot/msCoding/tree/master/javascript/projects/shopping%20cart">Shopping Cart</a>
+																	<a href="https://github.com/techieeliot/msCoding/tree/master/javascript/projects/shopping%20cart" target="_blank">Shopping Cart</a>
 																</li>
 															<li class="fa-js-square">
-																<a href="https://github.com/techieeliot/msCoding/tree/master/javascript/projects/tic-tac-toe">Tic Tac Toe</a>
-															</li>		
+																<a href="https://github.com/techieeliot/msCoding/tree/master/javascript/projects/tic-tac-toe" target="_blank">Tic Tac Toe</a>
+															</li>
+															<li class="fa-js-square">
+																<a href="https://github.com/techieeliot/msCoding/tree/master/javascript/projects/to-do-list" target="_blank">To-Do List</a>
+															</li>
+																	
 												</ul>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic03.jpg" alt="stack of books with html & css book at the bottom" /></a>
 											<div class="inner">
 												<h4>Pure HTML, CSS, Bootstrap, jQuery Sites, and Tailwind CSS</h4>
 												<p>During the months of October 2018 through March 2019, I learned HTML and CSS.</p>
 												<ul class="feature-icons">
 													<li class="fa-dollar-sign">
-														<a href="https://techieeliot.github.io/gcc-web-design-co/">jQuery Deep South Devs</a></li>
+														<a href="https://techieeliot.github.io/gcc-web-design-co/" target="_blank">jQuery Deep South Devs</a></li>
 													<li class="fa-stream">
-														<a href="https://github.com/techieeliot/mentors-scaling-garbanzo">Tailwind CSS Example Page</a>
+														<a href="https://github.com/techieeliot/mentors-scaling-garbanzo" target="_blank">Tailwind CSS Example Page</a>
 													<li class="fa-css3">
-														<a href="https://freecodecampjxn.github.io/flexbox-example/">CSS Flexbox freeCodeCamp Jackson, MS</a>
+														<a href="https://freecodecampjxn.github.io/flexbox-example/" target="_blank">CSS Flexbox freeCodeCamp Jackson, MS</a>
+													</li>
+													<li class="fa-html5">
+														<a href="https://xr9loxx76o.csb.app/" target="_blank">About Me Page</a>
 													</li>
 												</ul>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" />
+											<a href="#" class="image"><img src="images/pic04.jpg" alt="WordPress on a computer screen" />
 											</a>
 											<div class="inner">
 												<h4>WordPress & Wix Sites</h4>
 												<p>In December 2018, I created sites using content management systems.</p>
 												<ul class="feature-icons">
 													<li class="fa-wordpress">
-														<a href="https://weedwarriorsjackson.com/">Weed Warriors Jackson</a>
+														<a href="https://weedwarriorsjackson.com/" target="_blank"
+ target="_blank"
+ target="_blank">Weed Warriors Jackson</a>
 													</li>
 													<li class="fa-wix">
-														<a href="https://www.msparalegals.org/">Mississppi Paralegals Association</a>
+														<a href="https://www.msparalegals.org/" target="_blank"
+ target="_blank"
+ target="_blank">Mississppi Paralegals Association</a>
 													</li>
 
 												</ul>	
