add button for contact form cloes #31

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
 										<div class="inner">
 											<ul class="feature-icons">	
 												<li>
+													<a href="#four">
+														<button class="button primary icon fa-envelope-open">Contact form</button>
+													</a>
+												</li>
+												<li>
 													<a href="https://twitter.com/techieEliot" target="_blank">
 														<button class="button primary icon fa-twitter">techieEliot</button>
 													</a>
