--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<li><a href="https://www.facebook.com/eliot.b.sanford" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/techieeliot/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://github.com/techieeliot" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:eliot587@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:techieEliot@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -64,7 +64,7 @@
 									</header>
 									<article>
 										<h3>Welcome to my portfolio page!</h3>
-										<p class="bio-section">I'm excited to share with you some things about me, what I can do, and have created. I'm currently a full-time high school tech teacher making a career switch as a web developer. For the past two years, I've been learning on my own including projects, then at the end of last year I joined a bootcamp in the evenings. Please browse below and contact me via <a href="#four">the form at the bottom of this page</a>, <a href="https://twitter.com/techieEliot" target="_blank">Twitter</a>, or <a href="mailto:eliot587@gmail.com">my email</a>.</p> 
+										<p class="bio-section">I'm excited to share with you some things about me, what I can do, and have created. I'm currently a full-time high school tech teacher making a career switch as a web developer. For the past two years, I've been learning on my own including projects, then at the end of last year I joined a bootcamp in the evenings. Please browse below and contact me via <a href="#four">the form at the bottom of this page</a>, <a href="https://twitter.com/techieEliot" target="_blank">Twitter</a>, or <a href="mailto:techieEliot@gmail.com">my email</a>.</p> 
 										
 										<div class="inner">
 											<ul class="feature-icons">	
@@ -84,8 +84,8 @@
 													</a>
 												</li>
 												<li>
-													<a href="mailto:eliot587@gmail.com" target="_blank">
-														<button class="button primary icon fa-envelope">eliot587@gmail.com</button>
+													<a href="mailto:techieEliot@gmail.com" target="_blank">
+														<button class="button primary icon fa-envelope">techieEliot@gmail.com</button>
 													</a>
 												</li>
 											</ul>
@@ -187,7 +187,8 @@
 												<p>During the months of October 2018 through March 2019, I learned HTML and CSS.</p>
 												<ul class="feature-icons">
 													<li class="fa-dollar-sign">
-														<a href="https://techieeliot.github.io/gcc-web-design-co/" target="_blank">jQuery Deep South Devs</a></li>
+														<a href="https://devsouth.us" target="_blank">jQuery devSouth Consulting, LLC</a>
+													</li>
 													<li class="fa-stream">
 														<a href="https://github.com/techieeliot/mentors-scaling-garbanzo" target="_blank">Tailwind CSS Example Page</a>
 													<li class="fa-css3">
@@ -207,14 +208,10 @@
 												<p>In December 2018, I created sites using content management systems.</p>
 												<ul class="feature-icons">
 													<li class="fa-wordpress">
-														<a href="https://weedwarriorsjackson.com/" target="_blank"
- target="_blank"
- target="_blank">Weed Warriors Jackson</a>
+														<a href="https://weedwarriorsjackson.com/" target="_blank">Weed Warriors Jackson</a>
 													</li>
 													<li class="fa-wix">
-														<a href="https://www.msparalegals.org/" target="_blank"
- target="_blank"
- target="_blank">Mississppi Paralegals Association</a>
+														<a href="https://www.msparalegals.org/" target="_blank">Mississppi Paralegals Association</a>
 													</li>
 
 												</ul>	
@@ -626,7 +623,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								<li><a href="https://www.facebook.com/eliot.b.sanford" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/techieeliot/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://github.com/techieeliot" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="mailto:eliot587@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:techieEliot@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; 2020. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>
