update: add a few static netlify links to live pages and include biker app - remove kanye repo

--- a/index.html
+++ b/index.html
@@ -64,7 +64,15 @@
 									</header>
 									<article>
 										<h3>Welcome to my portfolio page!</h3>
-										<p class="bio-section">I'm excited to share with you some things about me, what I can do, and have created. I'm currently a full-time high school tech teacher making a career switch as a web developer. For the past two years, I've been learning on my own including projects, then at the end of last year I joined a bootcamp in the evenings. Please browse below and contact me via <a href="#four">the form at the bottom of this page</a>, <a href="https://twitter.com/techieEliot" target="_blank">Twitter</a>, or <a href="mailto:techieEliot@gmail.com">my email</a>.</p> 
+										<p class="bio-section">I'm excited to share with you some things about me, 
+											what I can do, and have created. I'm currently a full-time high school tech teacher 
+											making a career switch as a web developer. For the past two years, I've been learning 
+											on my own including projects, then at the end of last year I joined a bootcamp in the 
+											evenings. Please browse below and contact me via 
+											<a href="#four">the form at the bottom of this page</a>, 
+											<a href="https://twitter.com/techieEliot" target="_blank">Twitter</a>, or 
+											<a href="mailto:techieEliot@gmail.com">my email</a>.
+										</p> 
 										
 										<div class="inner">
 											<ul class="feature-icons">	
@@ -137,19 +145,19 @@
 												</p>
 												<ul class="feature-icons">
 													<li class="fa-react">
-														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/c__anecdotes__" target="_blank">Anecdote App</a>
+														<a href="https://thebikerapp.site" target="_blank">The Biker App</a>
+													</li>
+													<li class="fa-react">
+														<a href="https://kikisaver.site" target="_blank">Kiki Saver</a>
+													</li>
+													<li class="fa-react">
+														<a href="https://anecdote.netlify.app/" target="_blank">Anecdote App</a>
 													</li>
 													<li class="fa-react">
 														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/b__unicafe__" target="_blank">Feedback App</a>
 													</li>
 													<li class="fa-react">
 														<a href="https://techieeliot.github.io/jsforwp-conf-workshop-2019-eliot-react/" target="_blank">Image Box Page</a>
-													</li>
-													<li class="fa-node-js">
-														<a href="https://github.com/techieeliot/KikiSaver" target="_blank">Kiki Saver</a>
-													</li>
-													<li class="fa-node-js">
-														<a href="https://github.com/techieeliot/msCoding/tree/master/node" target="_blank">Kanye Quotes</a>
 													</li>
 													<li class="fa-tools">
 														<a href="https://techieeliot.github.io/magnoliaJS/" target="_blank">Web Components Workshop</a>
@@ -168,13 +176,13 @@
 																<a href="https://github.com/techieeliot/legendary-palm-tree" target="_blank">SQL CRUD Files</a>
 															</li>
 															<li class="fa-js-square">
-																	<a href="https://github.com/techieeliot/msCoding/tree/master/javascript/projects/shopping%20cart" target="_blank">Shopping Cart</a>
+																	<a href="https://ms-coding-shopping-cart.netlify.app/" target="_blank">Shopping Cart</a>
 																</li>
 															<li class="fa-js-square">
-																<a href="https://github.com/techieeliot/msCoding/tree/master/javascript/projects/tic-tac-toe" target="_blank">Tic Tac Toe</a>
+																<a href="https://ms-coding-tic-tac-toe.netlify.app/" target="_blank">Tic Tac Toe</a>
 															</li>
 															<li class="fa-js-square">
-																<a href="https://github.com/techieeliot/msCoding/tree/master/javascript/projects/to-do-list" target="_blank">To-Do List</a>
+																<a href="ms-coding-to-do-list.netlify.app" target="_blank">To-Do List</a>
 															</li>
 																	
 												</ul>
